--- a/build.gradle
+++ b/build.gradle
@@ -10,23 +10,28 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/release' }
 	maven { url 'https://repo.spring.io/milestone' }
 	maven { url 'https://repo.spring.io/snapshot' }
 	maven { url "https://maven.google.com" }
+	maven { url "https://repo.spring.io/libs-milestone" }
 }
+
+
+
 ext {
 	set('springCloudGcpVersion', "3.4.9")
 	set('springCloudVersion', "2021.0.6")
 }
 
 dependencies {
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	testImplementation 'junit:junit:4.13.2'
 	implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
-	implementation 'junit:junit:4.13.2'
-	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	//compile "io.springfox:springfox-swagger-ui:3.0.0"
 }
@@ -37,9 +42,4 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
-
-
-
-
-
 
