--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'junit:junit:4.13.2'
+	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	//compile "io.springfox:springfox-swagger-ui:3.0.0"
