--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.cloud.gcp.project-id=flash-bazaar-385401
 
+usuatio=Edward
+contrasena=123456
+
+
